--- a/index.html
+++ b/index.html
@@ -1449,8 +1449,21 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
-              <img src="assets/ds.jpeg" class="img-fluid circular--square" alt="">
+              <img src="assets/ramkumar.jpeg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Rajendra Prasad Das
+              </h4>
+              <p class="description">Professor <br>
+                Department of Mechanical Engineering,iitk</p>
+            </div>
+          </div>
+
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/ds.jpeg" class="img-fluid circular--square" alt="">
+              <h4 class="title">J. Ramkumar
+
               </h4>
               <p class="description">Pro-ViceChancell <br>
                 IGNOU</p>
@@ -1459,6 +1472,13 @@
 
 
 
+
+
+        </div>
+        <br>
+        <br>
+
+        <div class="row" style="margin-top: 28px;">
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
@@ -1470,13 +1490,6 @@
                 Department of Information Technology, IIITA</p>
             </div>
           </div>
-
-
-        </div>
-        <br>
-        <br>
-
-        <div class="row" style="margin-top: 28px;">
 
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
@@ -1514,6 +1527,16 @@
             </div>
           </div>
 
+
+
+
+
+          <br><br>
+
+        </div>
+
+        <div class="row" style="margin-top: 28px;">
+
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
@@ -1525,14 +1548,6 @@
                 NITTTR, Chandigarh</p>
             </div>
           </div>
-
-
-
-          <br><br>
-
-        </div>
-
-        <div class="row" style="margin-top: 28px;">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
