--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,8 @@
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
               <img src="assets/ramkumar.jpeg" class="img-fluid circular--square" alt="">
-              <h4 class="title">Dr. Rajendra Prasad Das
+              <h4 class="title">
+                J. Ramkumar
               </h4>
               <p class="description">Professor <br>
                 Department of Mechanical Engineering,iitk</p>
@@ -1462,8 +1463,8 @@
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
               <img src="assets/ds.jpeg" class="img-fluid circular--square" alt="">
-              <h4 class="title">J. Ramkumar
-
+              <h4 class="title">
+                Dr. Rajendra Prasad Das
               </h4>
               <p class="description">Pro-ViceChancell <br>
                 IGNOU</p>
