--- a/index.html
+++ b/index.html
@@ -1451,7 +1451,7 @@
             <div class="icon-box" style="width:100%">
               <img src="assets/ramkumar.jpeg" class="img-fluid circular--square" alt="">
               <h4 class="title">
-                J. Ramkumar
+                Dr. J. Ramkumar
               </h4>
               <p class="description">Professor <br>
                 Department of Mechanical Engineering,iitk</p>
@@ -1485,7 +1485,7 @@
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
               <img src="assets/sverma.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title">Prof. Shekhar Verma
+              <h4 class="title">Dr. Shekhar Verma
               </h4>
               <p class="description">Professor <br>
                 Department of Information Technology, IIITA</p>
